--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,9 +27,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Set version (based on commit hash or tag)
-      id: vars
-      run: echo "::set-output name=version::$(git rev-parse --short "$GITHUB_SHA")"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -62,9 +59,8 @@ jobs:
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
         poetry --version
-    - name: Install poetry-version-plugin
-      run: |
-        poetry plugin add poetry-version-plugin
     - name: Build python package
       run: |
+        git describe --tags --abbrev=0
+        poetry version $(git describe --tags --abbrev=0)
         poetry build
