--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,13 +24,9 @@ jobs:
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
         poetry --version
-    - name: Install poetry-version-plugin
-      run: |
-        poetry plugin add poetry-version-plugin
     - name: Build and publish on PyPI
-      env:
-        POETRY_HTTP_BASIC_PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        POETRY_HTTP_BASIC_PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
+        git describe --tags --abbrev=0
+        poetry version $(git describe --tags --abbrev=0)
         poetry build
-        poetry publish
+        poetry publish --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }}
