--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,17 +16,23 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: ${{ github.head_ref }}
-    - name: Set up python (required to determine version from git ref/hash)
+    - name: Set up python (required for poetry)
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: '3.9'
     - name: Install poetry
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        poetry --version
+        pip install poetry
+    - name: Install dependencies using poetry
+      run: |
+        poetry install
+    - name: Check code with ruff
+      run: |
+        poetry run ruff check .
     - name: Build and publish on PyPI
       run: |
-        git describe --tags --abbrev=0
-        poetry version $(git describe --tags --abbrev=0)
-        poetry build
-        poetry publish --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }}
+        echo "Build package version $VERSION"
+        poetry version $VERSION
+        poetry publish --build --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }}
+      env:
+        VERSION: ${{ github.event.release.tag_name }}
