--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,31 +13,31 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<3.11"
-dask = {extras = ["delayed"], version = "^2021.01.1"}
-numpy = "^1.16.5"
-pandas = "^1.2.0"
-pyarrow = "^5.0.0"
-xxhash = "^2.0.2"
+python = "^3.9"
+numpy = "^1.26.4"
+pandas = "^2.2.2"
+pyarrow = "^16.0.0"
+dask = {extras = ["delayed"], version = "^2024.4.2"}
+xxhash = "^3.4.1"
 cloudpickle = "^2.0.0"
-loguru = "^0.5.0"
+loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
-pylint = "^2.11.1"
-flake8 = "^4.0.1"
-black = "^21.10b0"
+ruff = "^0.4.1"
+black = "^24.4.0"
+pylint = "^3.1.0"
 mypy = "^0.910"
-pre-commit = "^2.15.0"
-isort = "^5.10.1"
+pre-commit = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+
 [tool.black]
-line_length = 99
-target_version = ['py38']
+line-length = 99
+target-version = ['py39']
 include = '\.pyi?$'
 exclude = '''
 (
@@ -63,6 +63,62 @@ exclude = '''
   )/
 )
 '''
+
+
+[tool.ruff]
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".ipynb_checkpoints",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "venv",
+]
+
+line-length = 99
+indent-width = 4
+
+target-version = "py39"
+
+[tool.ruff.lint]
+select = ["W", "E", "F"]
+ignore = ["E203", "E731"]
+extend-select = ["I"]
+
+# Allow fix for all enabled rules (when `--fix`) is provided.
+fixable = ["ALL"]
+unfixable = []
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+docstring-code-format = false
+
 
 [tool.pytest.ini_options]
 markers = [
