--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-cloudpickle==2.0.0; python_version >= "3.6"
-colorama==0.4.4; python_version >= "3.5" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.5" and python_full_version >= "3.5.0"
-dask==2021.12.0; python_version >= "3.7"
-fsspec==2021.11.1; python_version >= "3.7"
-locket==0.2.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
-loguru==0.5.3; python_version >= "3.5"
-numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
-packaging==21.3; python_version >= "3.7"
-pandas==1.3.5; python_full_version >= "3.7.1"
-partd==1.2.0; python_version >= "3.7"
-pyarrow==5.0.0; python_version >= "3.6"
-pyparsing==3.0.6; python_version >= "3.7"
-python-dateutil==2.8.2; python_full_version >= "3.7.1"
-pytz==2021.3; python_full_version >= "3.7.1"
-pyyaml==6.0; python_version >= "3.7"
-six==1.16.0; python_full_version >= "3.7.1"
-toolz==0.11.2; python_version >= "3.7"
-win32-setctime==1.0.4; sys_platform == "win32" and python_version >= "3.5"
-xxhash==2.0.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
+click==8.1.7 ; python_version >= "3.9" and python_version < "4.0"
+cloudpickle==2.2.1 ; python_version >= "3.9" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
+dask[delayed]==2024.4.2 ; python_version >= "3.9" and python_version < "4.0"
+fsspec==2024.3.1 ; python_version >= "3.9" and python_version < "4.0"
+importlib-metadata==7.1.0 ; python_version >= "3.9" and python_version < "3.12"
+locket==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+loguru==0.6.0 ; python_version >= "3.9" and python_version < "4.0"
+numpy==1.26.4 ; python_version >= "3.9" and python_version < "4.0"
+packaging==24.0 ; python_version >= "3.9" and python_version < "4.0"
+pandas==2.2.2 ; python_version >= "3.9" and python_version < "4.0"
+partd==1.4.1 ; python_version >= "3.9" and python_version < "4.0"
+pyarrow==16.0.0 ; python_version >= "3.9" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "4.0"
+pytz==2024.1 ; python_version >= "3.9" and python_version < "4.0"
+pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+toolz==0.12.1 ; python_version >= "3.9" and python_version < "4.0"
+tzdata==2024.1 ; python_version >= "3.9" and python_version < "4.0"
+win32-setctime==1.1.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
+xxhash==3.4.1 ; python_version >= "3.9" and python_version < "4.0"
+zipp==3.18.1 ; python_version >= "3.9" and python_version < "3.12"
