--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,4 @@
 repos:
-
   - repo: https://github.com/psf/black
     rev: 24.2.0
     hooks:
@@ -13,7 +12,7 @@ repos:
       # - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v0.910'
+    rev: "v0.910"
     hooks:
       - id: mypy
         args: [--ignore-missing-imports]
@@ -29,14 +28,14 @@ repos:
 
   - repo: local
     hooks:
-    - id: pylint
-      name: pylint
-      # entry: pylint mlutil/ -d C,R
-      entry: pylint apipe/ -E
-      language: python
-      'types': [python]
-      pass_filenames: false
-      stages: [commit]
+      - id: pylint
+        name: pylint
+        # entry: pylint mlutil/ -d C,R
+        entry: pylint apipe/ -E
+        language: python
+        "types": [python]
+        pass_filenames: false
+        stages: [commit]
 
   - repo: local
     hooks:
@@ -44,9 +43,8 @@ repos:
         name: pytest
         entry: pytest
         language: python
-        'types': [python]
+        "types": [python]
         pass_filenames: false
-        stages: [commit]
 
   - repo: local
     hooks:
