--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ pytest = "^6.2"
 ruff = "^0.4"
 black = "^24.4"
 pylint = "^3.1"
-mypy = "^0.910"
+mypy = ">=0.910"
 pre-commit = "^3.7"
 
 [build-system]
