--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,11 @@ pyarrow = "^16.0"
 dask = {extras = ["delayed"], version = "^2024.4"}
 xxhash = "^3.4"
 cloudpickle = "^2.0"
-loguru = "^0.6"
+loguru = ">=0.5"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2"
-ruff = "^0.4"
+pytest = "^8"
+ruff = ">=0.4"
 black = "^24.4"
 pylint = "^3.1"
 mypy = ">=0.910"
