--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ locket==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
 loguru==0.7.2 ; python_version >= "3.9" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.9" and python_version < "4.0"
 packaging==24.0 ; python_version >= "3.9" and python_version < "4.0"
-pandas==2.2.2 ; python_version >= "3.9" and python_version < "4.0"
+pandas[pyarrow]==2.2.2 ; python_version >= "3.9" and python_version < "4.0"
 partd==1.4.1 ; python_version >= "3.9" and python_version < "4.0"
-pyarrow==5.0.0 ; python_version >= "3.9" and python_version < "4.0"
+pyarrow==16.0.0 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.9" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
