--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,9 @@ include = [
 python = "^3.9"
 numpy = "^1.25"
 pandas = {extras = ["pyarrow"], version = "^2.1"}
-dask = {extras = ["delayed"], version = "^2022"}
+dask = {extras = ["delayed"], version = ">=2023"}
 xxhash = "^3.4"
-cloudpickle = "^2.0"
+cloudpickle = ">=2"
 loguru = ">=0.5"
 
 [tool.poetry.dev-dependencies]
