--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 click==8.1.7 ; python_version >= "3.9" and python_version < "4.0"
-cloudpickle==2.2.1 ; python_version >= "3.9" and python_version < "4.0"
+cloudpickle==3.0.0 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
-dask[delayed]==2022.12.1 ; python_version >= "3.9" and python_version < "4.0"
+dask[delayed]==2024.5.0 ; python_version >= "3.9" and python_version < "4.0"
 fsspec==2024.3.1 ; python_version >= "3.9" and python_version < "4.0"
+importlib-metadata==7.1.0 ; python_version >= "3.9" and python_version < "3.12"
 locket==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
 loguru==0.7.2 ; python_version >= "3.9" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.9" and python_version < "4.0"
 packaging==24.0 ; python_version >= "3.9" and python_version < "4.0"
 pandas[pyarrow]==2.2.2 ; python_version >= "3.9" and python_version < "4.0"
-partd==1.4.1 ; python_version >= "3.9" and python_version < "4.0"
+partd==1.4.2 ; python_version >= "3.9" and python_version < "4.0"
 pyarrow==16.0.0 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.9" and python_version < "4.0"
@@ -18,3 +19,4 @@ toolz==0.12.1 ; python_version >= "3.9" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.9" and python_version < "4.0"
 win32-setctime==1.1.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
 xxhash==3.4.1 ; python_version >= "3.9" and python_version < "4.0"
+zipp==3.18.1 ; python_version >= "3.9" and python_version < "3.12"
